# arangodb-mesos-framework

./: .gitignore  CMakeLists.txt  COMPILING.md  Dockerfile  Makefile.am  README.md  configure.ac  jenkins-build.sh  release.sh
assets/: index.html
cmake/Modules/: FindLibmicrohttpd.cmake  FindLibunwind.cmake  FindSASL2.cmake  Findapr.cmake  Findgflags.cmake  Findsvn.cmake
env-build-container/: Dockerfile
frontend-src/: README.md  package.json
frontend-src/src/: client.js  dump-index.js
frontend-src/src/containers/Home/: .Home.js.swp  Home.js
frontend-src/src/helpers/: ApiClient.js  Html.js
frontend-src/webpack/: prod.config.js
marathon/: marathon.json
mesos-scripts/: framework.sh
src/: ArangoManager.cpp  ArangoManager.h  ArangoScheduler.cpp  ArangoScheduler.h  ArangoState.cpp  ArangoState.h  Caretaker.cpp  Caretaker.h  CaretakerCluster.cpp  CaretakerCluster.h  CaretakerStandalone.cpp  CaretakerStandalone.h  FrameworkFlags.h  Global.cpp  Global.h  HttpServer.cpp  arangodb.pb.cc  arangodb.pb.h  arangodb.proto  framework.cpp  utils.cpp  utils.h
